# Nexus

./: .gitignore  .golangci.yml  .mise.toml  Cargo.toml  README.md  go-port-research.md  go.mod  go.sum  infrastructure-research.md  main.go  mise.toml  sqlc.yaml
.github/workflows/: ci.yaml  integration-test.yml.disabled  release.yaml
.mise/tasks/: build.sh  check  ci  clean  e2e.sh  fmt  openapi  run  sqlc  test.sh  version  wipe
.mise/tasks/aur/: test
.mise/tasks/e2e/: clean
.mise/tasks/install/: local
.mise/tasks/mod/: download  tidy
.mise/tasks/test/: btrfs  unit
.mise/tasks/uninstall/: local
aur/: .gitignore  PKGBUILD  nexus-virt.install
client/: backup.go  client.go  client_test.go  device.go  drive.go  errors.go  network.go  template.go  vm.go
cmd/: daemon.go  export.go  import.go  root.go  setup.go
cmd/nexus-btrfs/: main.go
cmd/nexus-cni-exec/: forward.go  main.go
cmd/nexus-dns/: main.go
cmd/nexus-netns/: main.go
cmd/nexus-quota/: main.go
cmd/nexusctl/: backup.go  console.go  device.go  drive.go  env.go  exec.go  format.go  main.go  mcp_bridge.go  mcp_bridge_test.go  network.go  root.go  template.go  vm.go
docs/: 2026-03-12-clustering-research.md  2026-04-03-nexus-ui-design.md  2026-04-03-nexus-ui-requirements.md  2026-04-08-http-readheadertimeout-bug.md  2026-04-17-restart-reuses-stale-mount-spec.md  2026-04-18-vm-pool-and-clone.md  architecture.md  auto-start-design.md  backup-restore-design.md  clustering-design-progress.md  e2e-test-suite-design.md  e2e-tests.md  exec-streaming-design.md  firewall-forwarding-design.md  go-linux-capabilities.md  health-service-design.md  kata-kernel-testing.md  kata.md  mcp-endpoint-design.md  mcp-streaming-exec-design.md  network-migration-design.md  networking.md  nexusctl-design.md  provisioning-templates-design.md  remaining-features.md  shell-sync-design.md  terminal-access-design.md  value-and-moat.md  vm-env-vars-design.md  vm-image-update-design.md  vm-observability-design.md  vm-root-size-design.md  vm-tags-design.md
docs/plans/: 2026-02-28-btrfs-package-design.md  2026-02-28-btrfs-package-plan.md  2026-03-01-btrfs-quota-design.md  2026-03-01-btrfs-quota-enforcement.md  2026-03-01-btrfs-quota-plan.md  2026-03-01-device-passthrough-design.md  2026-03-01-device-passthrough.md  2026-03-01-drives-plan.md  2026-03-01-network-reset-endpoint.md  2026-03-01-networking-plan.md  2026-03-01-nexus-service-plan.md  2026-03-02-backup-restore.md  2026-03-02-coredns-internal-dns.md  2026-03-02-e2e-test-suite.md  2026-03-02-nxid-base32-ids.md  2026-03-02-vm-root-size.md  2026-03-02-webhook-cleanup.md  2026-03-03-auto-start.md  2026-03-03-exec-streaming.md  2026-03-03-mcp-endpoint.md  2026-03-03-terminal-access.md  2026-03-05-nexusctl.md  2026-03-06-shell-sync.md  2026-03-06-vm-observability.md  2026-03-06-vm-tags.md  2026-03-07-firewall-forwarding.md  2026-03-07-host-dns-design.md  2026-03-07-host-dns.md  2026-03-07-live-snapshots-design.md  2026-03-07-live-snapshots.md  2026-03-07-provisioning-templates.md  2026-03-08-mcp-streaming-exec.md  2026-03-09-health-service.md  2026-03-13-network-migration.md  2026-03-16-vm-env-vars.md  2026-03-18-vm-image-update.md  2026-04-03-nexus-ui-plan.md  2026-04-19-clonedrive.md  2026-04-19-e2e-harness-orphan-leak-hardening.md  2026-04-19-skip-guards.md
guest-agent/: Cargo.toml
guest-agent/src/: env.rs  main.rs  mcp.rs  metadata.rs  vsock.rs
integration-tests/: Cargo.toml  README.md
integration-tests/src/: lib.rs  main.rs  networking.rs  prerequisites.rs  smoke_test.rs  vm_lifecycle.rs
internal/app/: backup.go  backup_test.go  drive_clone.go  drive_clone_test.go  health.go  health_containerd.go  health_containerd_test.go  health_disk.go  health_disk_test.go  health_kata.go  health_kata_test.go  health_resolved.go  health_resolved_test.go  health_test.go  restart.go  restart_test.go  snapshot.go  vm_service.go  vm_service_test.go
internal/config/: config.go
internal/domain/: console.go  device.go  drive.go  ports.go  snapshot.go  template.go  vm.go  vm_test.go
internal/infra/: open.go
internal/infra/cni/: fingerprint.go  fingerprint_test.go  gateway.go  gateway_test.go  network.go  noop.go
internal/infra/containerd/: runtime.go  runtime_test.go
internal/infra/dns/: manager.go  manager_test.go  noop.go
internal/infra/httpapi/: console.go  handler.go  handler_test.go  webhook.go  webhook_test.go
internal/infra/mcp/: handler.go  handler_test.go  notify_writer.go  notify_writer_test.go
internal/infra/postgres/: seeds.go  store.go
internal/infra/resolved/: resolved.go  resolved_test.go
internal/infra/sqlite/: models.go  queries.sql  (+5 more)
nexus-lib/: Cargo.toml
nexus-lib/src/: asset.rs  build_service.rs  client.rs  config.rs  download_workflow_tests.rs  drive.rs  drive_service.rs  embedded.rs  firecracker_service.rs  github.rs  id.rs  kernel_service.rs  lib.rs  mcp_client.rs  network_service.rs  pgp.rs  pipeline.rs  rootfs_service.rs  step12_networking_qa.rs  template.rs  test_support.rs  vm.rs  vm_service.rs  vsock_manager.rs  workspace.rs  workspace_service.rs
nexus-lib/src/backend/: btrfs.rs  mod.rs  traits.rs
nexus-lib/src/store/: mod.rs  schema.rs  sqlite.rs  traits.rs
nexus-lib/tests/: networking_qa.rs
nexus-protocol/: Cargo.toml
nexus-protocol/src/: jsonrpc.rs
nexusctl/: Cargo.toml
nexusctl/src/: config.rs  main.rs
nexusctl/tests/: cli.rs  mcp_bridge.rs
nexusd/: Cargo.toml
nexusd/src/: api.rs  logging.rs  main.rs  mcp_handler.rs  monitor.rs  server.rs
nexusd/tests/: daemon.rs  download.rs  download_fixtures.rs  mcp_protocol.rs
pkg/btrfs/: btrfs.go  btrfs_test.go  e2e_test.go  ioctl.go
pkg/bytesize/: bytesize.go  bytesize_test.go
pkg/nxid/: nxid.go  nxid_test.go
scripts/: build-rootfs.sh  dev-setcap-loop.sh
tests/e2e/: .gitignore  backup_test.go  drive_clone_test.go  go.mod  go.sum  metrics_test.go  nexus_test.go  restart_test.go  snapshot_test.go
web/: .gitignore  embed.go  embed_ui.go  frontend_test.go  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  index.ts
(+28 files in other folders)
