[package]
name = "guest-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "time", "io-util", "fs", "process", "sync"] }
tokio-vsock = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
nexus-protocol = { path = "../nexus-protocol" }

[dev-dependencies]
tempfile = "3"
