[package]
name = "nexus-lib"
version = "0.1.0"
edition = "2021"

[features]
test-support = ["dep:nix", "dep:tempfile", "dep:tokio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
pgp = "0.14"
rusqlite = { version = "0.34", features = ["bundled"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
libbtrfsutil = "0.7"
tracing = "0.1"
nix = { version = "0.30", features = ["signal"], optional = true }
tempfile = { version = "3", optional = true }
tokio = { version = "1", features = ["rt", "macros", "time"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
serde_json = "1"
