# Build order requirement for guest-agent embedding:
# 1. cargo build -p guest-agent --target x86_64-unknown-linux-musl --release
# 2. cargo build -p nexus-lib (embeds via include_bytes!)
# 3. cargo build -p nexusd (depends on guest-agent to enforce order)
#
# The mise build task handles this automatically.

[package]
name = "nexus-lib"
version = "0.1.0"
edition = "2021"

[features]
test-support = ["dep:tempfile"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "stream"] }
pgp = "0.14"
sha2 = "0.10"
xz2 = "0.1"
flate2 = "1"
futures-util = { version = "0.3", default-features = false }
async-trait = "0.1"
rusqlite = { version = "0.34", features = ["bundled"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tar = "0.4"
libbtrfsutil = "0.7"
tracing = "0.1"
nix = { version = "0.30", features = ["signal", "process", "user"] }
tempfile = { version = "3", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "net", "sync", "io-util"] }
chrono = "0.4"
anyhow = "1"
data-encoding = "2.6"
rand = "0.10"
thiserror = "2"
nexus-protocol = { path = "../nexus-protocol" }
nftables = "0.5"
ipnetwork = "0.21"
rtnetlink = "0.15"
tun-tap = "0.1.4"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
serde_json = "1"
wiremock = "0.6"
