[package]
name = "nexusctl"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-lib = { path = "../nexus-lib" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
dirs = "6"
chrono = "0.4"
libc = "0.2"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
nexus-lib = { path = "../nexus-lib", features = ["test-support"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
assert_cmd = "2"
