[package]
name = "nexusd"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-lib = { path = "../nexus-lib" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.30", features = ["signal", "process", "user"] }
guest-agent = { path = "../guest-agent" }  # Build dependency for embedded binary

[dev-dependencies]
nexus-lib = { path = "../nexus-lib", features = ["test-support"] }
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tempfile = "3"
